# rh-agent-tools

./: .gitignore  .npmrc  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  LICENSE  README.md  SECURITY.md  biome.json  package.json  tsconfig.json
.github/: dependabot.yml
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  release-python.yml  release-typescript.yml  release.yml
__tests__/client/: auth.test.ts  client.test.ts  errors.test.ts  http.test.ts  index.test.ts  session.test.ts  token-store.test.ts  urls.test.ts
__tests__/server/: install-mcp.test.ts  install-skills.test.ts  install-workspace-dep.test.ts  tools.test.ts
docs/: ARCHITECTURE.md  CONTRIBUTING.md  DOCKER.md  SECURITY.md  robinhood-api-reference.md  stream-viewer.md
python/: README.md  pyproject.toml
python/src/robinhood_agents/: __init__.py  _auth.py  _client.py  _errors.py  _http.py  _redact.py  _session.py  _token_store.py  _types.py  _urls.py
python/tests/: conftest.py  test_auth.py  test_client.py  test_errors.py  test_http.py  test_types.py  test_urls.py
python/tests/integration/: test_client.py
skills/robinhood-for-agents/: SKILL.md  client-api.md  reference.md  trade.md
skills/robinhood-options/: SKILL.md  client-api.md
skills/robinhood-portfolio/: SKILL.md  client-api.md
skills/robinhood-research/: SKILL.md  client-api.md
skills/robinhood-trade/: SKILL.md  client-api.md
src/: bun-secrets.d.ts  index.ts  redact.ts
src/client/: auth.ts  client.ts  index.ts  session.ts  token-store.ts  urls.ts
src/server/: browser-auth.ts  server.ts
typescript/: biome.json  package.json  vitest.config.ts
typescript/src/: redact.ts
(+58 files in other folders)
