[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "robinhood-for-agents"
version = "0.1.0"
description = "Async Python client for the Robinhood trading API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
keywords = ["robinhood", "trading", "api-client", "async", "finance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
    "Framework :: Pydantic :: 2",
]
dependencies = [
    "httpx>=0.27,<1",
    "pydantic>=2.5,<3",
    "keyring>=25,<27",
    "cryptography>=43,<45",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
    "mypy>=1.11",
    "ruff>=0.7",
]

[project.urls]
Homepage = "https://github.com/kevin1chun/robinhood-for-agents"
Repository = "https://github.com/kevin1chun/robinhood-for-agents"
Issues = "https://github.com/kevin1chun/robinhood-for-agents/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/robinhood_agents"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-m 'not integration'"
markers = ["integration: requires running auth proxy (not run in CI)"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TCH", "RUF"]
